scray-examples/ml-job-coordination/agent/ki-side/agent/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-tensorflow-job
  labels:
    app: jupyter-tensorflow-job
spec:
  template:
    metadata:
      labels:
        app: jupyter-tensorflow-job
    spec:
      containers:
        - name: scray-ai-container
          image: scray-jupyter_tensorflow-gpu:0.1.1
          workingDir: /opt/scray-sync/
          volumeMounts:
            - name: ssh-key-volume
              mountPath: "/etc/ssh-key"
      volumes:
        - name: ssh-key-volume
          secret:
            secretName: data-ssh-key
            defaultMode: 256
