scray-examples/ml-job-coordination/agent/ki-side/agent/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: SCARY-APP-SERVICE
spec:
  selector:
    app: SCRAY-APP-LABLE
  ports:
    - port: 7860
