scray-examples/ml-job-coordination/agent/ki-side/agent/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scray-app-ingress-template
  annotations:
    nginx.org/websocket-services: gradio-example-app6
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: HOST
    http:
        paths:
          - path: /
            #lopathType: ImplementationSpecific
            pathType: Prefix
            backend:
              service:
                name: gradio-example-app6
                port:
                  number: 7860
